# personal/courses/gestion de stock/resources/gestiondestock/target/swagger.json
@@ -22,7 +22,7 @@
     }, {
       "name" : "commandefournisseur"
     }, {
-      "name" : "interventions"
+      "name" : "interventionclient"
     }, {
       "name" : "entreprises"
     }, {
@@ -34,7 +34,7 @@
     }, {
       "name" : "utilisateurs"
     }, {
-      "name" : "ventes"
+      "name" : "interventions"
     } ],
     "paths" : {
       "/gestiondestock/v1/produits/all" : {
@@ -207,10 +207,10 @@
           }
         }
       },
-      "/gestiondestock/v1/produits/historique/vente/{idProduit}" : {
+      "/gestiondestock/v1/produits/historique/interventions/{idProduit}" : {
         "get" : {
           "tags" : [ "produits" ],
-          "operationId" : "findHistoriqueVentes",
+          "operationId" : "findHistoriqueInterventions",
           "produces" : [ "application/json" ],
           "parameters" : [ {
             "name" : "idProduit",
@@ -225,7 +225,7 @@
               "schema" : {
                 "type" : "array",
                 "items" : {
-                  "$ref" : "#/definitions/LigneVenteDto"
+                  "$ref" : "#/definitions/LigneInterventionDto"
                 }
               }
             }
@@ -485,7 +485,7 @@
           }
         }
       },
-      "/gestiondestock/v1/interventions/all" : {
+      "/gestiondestock/v1/intervention/all" : {
         "get" : {
           "tags" : [ "interventions" ],
           "operationId" : "findAll",
@@ -1466,9 +1466,9 @@
           }
         }
       },
-      "/gestiondestock/v1/ventes/all" : {
+      "/gestiondestock/v1/interventions/all" : {
         "get" : {
-          "tags" : [ "ventes" ],
+          "tags" : [ "interventions" ],
           "operationId" : "findAll",
           "responses" : {
             "200" : {
@@ -1476,41 +1476,41 @@
               "schema" : {
                 "type" : "array",
                 "items" : {
-                  "$ref" : "#/definitions/VentesDto"
+                  "$ref" : "#/definitions/InterventionsDto"
                 }
               }
             }
           }
         }
       },
-      "/gestiondestock/v1/ventes/create" : {
+      "/gestiondestock/v1/intervention/create" : {
         "post" : {
-          "tags" : [ "ventes" ],
+          "tags" : [ "interventions" ],
           "operationId" : "save",
           "parameters" : [ {
             "in" : "body",
             "name" : "body",
             "required" : false,
             "schema" : {
-              "$ref" : "#/definitions/VentesDto"
+              "$ref" : "#/definitions/InterventionsDto"
             }
           } ],
           "responses" : {
             "200" : {
               "description" : "successful operation",
               "schema" : {
-                "$ref" : "#/definitions/VentesDto"
+                "$ref" : "#/definitions/InterventionsDto"
               }
             }
           }
         }
       },
-      "/gestiondestock/v1/ventes/delete/{idVente}" : {
+      "/gestiondestock/v1/interventions/delete/{idIntervention}" : {
         "delete" : {
-          "tags" : [ "ventes" ],
+          "tags" : [ "interventions" ],
           "operationId" : "delete",
           "parameters" : [ {
-            "name" : "idVente",
+            "name" : "idIntervention",
             "in" : "path",
             "required" : true,
             "type" : "integer",
@@ -1523,12 +1523,12 @@
           }
         }
       },
-      "/gestiondestock/v1/ventes/{codeVente}" : {
+      "/gestiondestock/v1/interventions/{codeIntervention}" : {
         "get" : {
-          "tags" : [ "ventes" ],
+          "tags" : [ "interventions" ],
           "operationId" : "findByCode",
           "parameters" : [ {
-            "name" : "codeVente",
+            "name" : "codeIntervention",
             "in" : "path",
             "required" : true,
             "type" : "string"
@@ -1537,18 +1537,18 @@
             "200" : {
               "description" : "successful operation",
               "schema" : {
-                "$ref" : "#/definitions/VentesDto"
+                "$ref" : "#/definitions/InterventionsDto"
               }
             }
           }
         }
       },
-      "/gestiondestock/v1/ventes/{idVente}" : {
+      "/gestiondestock/v1/interventions/{idIntervention}" : {
         "get" : {
-          "tags" : [ "ventes" ],
+          "tags" : [ "interventions" ],
           "operationId" : "findById",
           "parameters" : [ {
-            "name" : "idVente",
+            "name" : "idIntervention",
             "in" : "path",
             "required" : true,
             "type" : "integer",
@@ -1558,7 +1558,7 @@
             "200" : {
               "description" : "successful operation",
               "schema" : {
-                "$ref" : "#/definitions/VentesDto"
+                "$ref" : "#/definitions/InterventionsDto"
               }
             }
           }
@@ -1646,10 +1646,10 @@
           "category" : {
             "$ref" : "#/definitions/Category"
           },
-          "ligneVentes" : {
+          "ligneInterventions" : {
             "type" : "array",
             "items" : {
-              "$ref" : "#/definitions/LigneVente"
+              "$ref" : "#/definitions/LigneIntervention"
             }
           },
           "ligneInterventionClients" : {
@@ -2244,7 +2244,7 @@
           }
         }
       },
-      "LigneVente" : {
+      "LigneIntervention" : {
         "type" : "object",
         "properties" : {
           "id" : {
@@ -2259,8 +2259,8 @@
             "type" : "integer",
             "format" : "int64"
           },
-          "vente" : {
-            "$ref" : "#/definitions/Ventes"
+          "interventions" : {
+            "$ref" : "#/definitions/Interventions"
           },
           "article" : {
             "$ref" : "#/definitions/Article"
@@ -2277,15 +2277,15 @@
           }
         }
       },
-      "LigneVenteDto" : {
+      "LigneInterventionDto" : {
         "type" : "object",
         "properties" : {
           "id" : {
             "type" : "integer",
             "format" : "int32"
           },
-          "vente" : {
-            "$ref" : "#/definitions/VentesDto"
+          "interventions" : {
+            "$ref" : "#/definitions/InterventionsDto"
           },
           "article" : {
             "$ref" : "#/definitions/ProduitDto"
@@ -2333,7 +2333,7 @@
           },
           "sourceMvt" : {
             "type" : "string",
-            "enum" : [ "COMMANDE_CLIENT", "COMMANDE_FOURNISSEUR", "VENTE" ]
+            "enum" : [ "COMMANDE_CLIENT", "COMMANDE_FOURNISSEUR", "INTERVENTION" ]
           },
           "idEntreprise" : {
             "type" : "integer",
@@ -2364,7 +2364,7 @@
           },
           "sourceMvt" : {
             "type" : "string",
-            "enum" : [ "COMMANDE_CLIENT", "COMMANDE_FOURNISSEUR", "VENTE" ]
+            "enum" : [ "COMMANDE_CLIENT", "COMMANDE_FOURNISSEUR", "INTERVENTION" ]
           },
           "idEntreprise" : {
             "type" : "integer",
@@ -2424,7 +2424,7 @@
           }
         }
       },
-      "Ventes" : {
+      "Interventions" : {
         "type" : "object",
         "properties" : {
           "id" : {
@@ -2442,7 +2442,7 @@
           "code" : {
             "type" : "string"
           },
-          "dateVente" : {
+          "dateIntervention" : {
             "type" : "integer",
             "format" : "int64"
           },
@@ -2453,15 +2453,15 @@
             "type" : "integer",
             "format" : "int32"
           },
-          "ligneVentes" : {
+          "ligneInterventions" : {
             "type" : "array",
             "items" : {
-              "$ref" : "#/definitions/LigneVente"
+              "$ref" : "#/definitions/LigneIntervention"
             }
           }
         }
       },
-      "VentesDto" : {
+      "InterventionsDto" : {
         "type" : "object",
         "properties" : {
           "id" : {
@@ -2471,17 +2471,17 @@
           "code" : {
             "type" : "string"
           },
-          "dateVente" : {
+          "dateIntervention" : {
             "type" : "integer",
             "format" : "int64"
           },
           "commentaire" : {
             "type" : "string"
           },
-          "ligneVentes" : {
+          "ligneInterventions" : {
             "type" : "array",
             "items" : {
-              "$ref" : "#/definitions/LigneVenteDto"
+              "$ref" : "#/definitions/LigneInterventionDto"
             }
           },
           "idEntreprise" : {
