# src/gs-api/src/api.module.ts
@@ -7,14 +7,14 @@ import { ProduitsService } from './services/produits.service';
 import { AuthenticationService } from './services/authentication.service';
 import { CategoriesService } from './services/categories.service';
 import { ClientsService } from './services/clients.service';
-import { InterventionsService } from './services/interventions.service';
+import { InterventionsService } from './services/interventions-client.service';
 import { CommandefournisseurService } from './services/commandefournisseur.service';
 import { EntreprisesService } from './services/entreprises.service';
 import { FournisseurService } from './services/fournisseur.service';
 import { MvtstkService } from './services/mvtstk.service';
 import { PhotosService } from './services/photos.service';
 import { UtilisateursService } from './services/utilisateurs.service';
-import { VentesService } from './services/ventes.service';
+import { InterventionService } from './services/Intervention.service';
 
 /**
  * Provider for all Api services, plus ApiConfiguration
@@ -40,7 +40,7 @@ import { VentesService } from './services/ventes.service';
     MvtstkService,
     PhotosService,
     UtilisateursService,
-    VentesService
+    InterventionService
   ],
 })
 export class ApiModule {
