# src/gs-api/src/models.ts
@@ -20,11 +20,11 @@ export { LigneInterventionClient } from './models/ligne-intervention-client';
 export { LigneInterventionClientDto } from './models/ligne-intervention-client-dto';
 export { LigneCommandeFournisseur } from './models/ligne-commande-fournisseur';
 export { LigneCommandeFournisseurDto } from './models/ligne-commande-fournisseur-dto';
-export { LigneVente } from './models/ligne-vente';
-export { LigneVenteDto } from './models/ligne-vente-dto';
+export { LigneIntervention } from './models/ligne-intervention';
+export { LigneInterventionDto } from './models/ligne-intervention-dto';
 export { MvtStk } from './models/mvt-stk';
 export { MvtStkDto } from './models/mvt-stk-dto';
 export { RolesDto } from './models/roles-dto';
 export { UtilisateurDto } from './models/utilisateur-dto';
-export { Ventes } from './models/ventes';
-export { VentesDto } from './models/ventes-dto';
+export { Interventions } from './models/interventions';
+export { InterventionsDto } from './models/interventions-dto';
