# src/gs-api/src/models/interventions-dto.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+import { LigneInterventionDto } from './ligne-intervention-dto';
+export interface InterventionsDto {
+  code?: string;
+  commentaire?: string;
+  dateVente?: number;
+  id?: number;
+  idEntreprise?: number;
+  ligneIntervention?: Array<LigneInterventionDto>;
+}
