# src/gs-api/src/models/interventions.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+import { LigneIntervention } from './ligne-intervention';
+export interface Interventions {
+  code?: string;
+  commentaire?: string;
+  creationDate?: number;
+  dateIntervention?: number;
+  id?: number;
+  idEntreprise?: number;
+  lastModifiedDate?: number;
+  ligneIntervention?: Array<LigneIntervention>;
+}
