# src/gs-api/src/models/ligne-intervention-client-dto.ts
@@ -1,9 +1,10 @@
 /* tslint:disable */
+import { InterventionClientDto } from './intervention-client-dto';
 import { ProduitDto } from './produit-dto';
 export interface LigneInterventionClientDto {
-  article?: ProduitDto;
+  interventions?: InterventionClientDto;
   id?: number;
   idEntreprise?: number;
-  prixUnitaire?: number;
-  quantite?: number;
+  dateouvertureTicket?: number;
+  problematique?: string;
 }
