# src/gs-api/src/models/ligne-vente-dto.ts
@@ -1,11 +1,0 @@
-/* tslint:disable */
-import { ProduitDto } from './produit-dto';
-import { VentesDto } from './ventes-dto';
-export interface LigneVenteDto {
-  article?: ProduitDto;
-  id?: number;
-  idEntreprise?: number;
-  prixUnitaire?: number;
-  quantite?: number;
-  vente?: VentesDto;
-}
